# holo

./: CMakeLists.txt  README.md  vcpkg.json
include/: DICOMLoader.h  DirectXRenderer.h  MarchingCubes.h  Utils.h  Volume.h  marching_cubes_tables.h  tables.h
shaders/: fragment.hlsl  vertex.hlsl
src/: DICOMLoader.cpp  MarchingCubes.cpp  Utils.cpp  Volume.cpp  main.cpp
